--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ button:focus,
     z-index             : -1;
     width               : 100%;
     height              : 100%;
-    background-image    : url(../img/img-profile.jpg);
+    background-image    : url(../img/IMG_7644.jpg);
     background-size     : cover;
     background-position : center top;
     }
